--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,7 +85,7 @@ click = "^8.0.0"
 testpaths = ["tests", "parsers/test", "electricitymap/contrib/lib/tests"]
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core>=1.0.0,<2"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.ruff]
