remove all references to VN-N, VN-C and VN-S manually and using remove_zone script

--- a/config/zones/VN.yaml
+++ b/config/zones/VN.yaml
@@ -60,8 +60,5 @@ region: Asia
 sources:
   EMBER 2022:
     link: https://ember-climate.org/countries-and-regions/countries/viet-nam/
-subZoneNames:
-  - VN-N
-  - VN-C
-  - VN-S
+subZoneNames: []
 timezone: Asia/Ho_Chi_Minh
