--- a/config/zones/EC.yaml
+++ b/config/zones/EC.yaml
@@ -1,3 +1,8 @@
+bounding_box:
+  - - -92.16951669516689
+    - -5.511463268937746
+  - - -74.72815228152277
+    - 1.93413381070657
 country: EC
 region: Americas
 timezone: America/Guayaquil
