--- a/config/zones/ES-IB-ME.yaml
+++ b/config/zones/ES-IB-ME.yaml
@@ -8,7 +8,20 @@ contributors:
   - systemcatch
   - alixunderplatz
   - silimotion
+  - hectodium
 country: ES
+capacity:
+  # capacity sources described in
+  # https://github.com/electricitymaps/electricitymaps-contrib/issues/7520
+  biomass: 0
+  coal: 0
+  gas: 0
+  geothermal: 0
+  hydro: 0
+  nuclear: 0
+  oil: 271.6
+  solar: 50.8
+  wind: 0
 delays:
   production: 5
 emissionFactors:
