--- a/config/zones/GA.yaml
+++ b/config/zones/GA.yaml
@@ -1,3 +1,8 @@
+bounding_box:
+  - - 8.195886958869607
+    - -4.4367200613860405
+  - - 14.999144991449924
+    - 2.809956504477071
 country: GA
 region: Africa
 timezone: Africa/Libreville
