--- a/config/zones/FJ.yaml
+++ b/config/zones/FJ.yaml
@@ -1,3 +1,8 @@
+bounding_box:
+  - - -180.5
+    - -19.62909541607167
+  - - 180.5
+    - -15.649580957852429
 country: FJ
 region: Oceania
 timezone: Pacific/Fiji
