--- a/config/zones/YE.yaml
+++ b/config/zones/YE.yaml
@@ -1,3 +1,8 @@
+bounding_box:
+  - - 42.111826118261206
+    - 11.80463900985805
+  - - 54.97034470344704
+    - 19.49495125393824
 country: YE
 region: Asia
 timezone: Asia/Aden
