--- a/config/zones/VN.yaml
+++ b/config/zones/VN.yaml
@@ -1,8 +1,8 @@
 bounding_box:
-  - - 135.84
-    - 33.82
-  - - 138.72
-    - 37.17
+  - - 101.62042120421202
+    - 8.090979058331172
+  - - 109.96449464494643
+    - 23.86547822579297
 capacity:
   biomass: 356
   coal: 25820
@@ -21,14 +21,16 @@ emissionFactors:
   direct:
     unknown:
       - datetime: '2022-01-01'
-        source: EMBER 2022; assumes 38.76% coal, 36.91% hydro, 10.68% gas, 10.14% solar,
-          3.09% wind, 0.14% biomass and 0.27% from other thermal
+        source: >-
+          EMBER 2022; assumes 38.76% coal, 36.91% hydro, 10.68% gas, 10.14%
+          solar, 3.09% wind, 0.14% biomass and 0.27% from other thermal
         value: 336
   lifecycle:
     unknown:
       - datetime: '2022-01-01'
-        source: EMBER 2022; assumes 38.76% coal, 36.91% hydro, 10.68% gas, 10.14% solar,
-          3.09% wind, 0.14% biomass and 0.27% from other thermal
+        source: >-
+          EMBER 2022; assumes 38.76% coal, 36.91% hydro, 10.68% gas, 10.14%
+          solar, 3.09% wind, 0.14% biomass and 0.27% from other thermal
         value: 386
 fallbackZoneMixes:
   _source: EMBER 2022
@@ -44,13 +46,15 @@ fallbackZoneMixes:
 isLowCarbon:
   unknown:
     - datetime: '2022-01-01'
-      source: EMBER 2022; assumes 38.76% coal, 36.91% hydro, 10.68% gas, 10.14% solar,
+      source: >-
+        EMBER 2022; assumes 38.76% coal, 36.91% hydro, 10.68% gas, 10.14% solar,
         3.09% wind, 0.14% biomass and 0.27% from other thermal
       value: 0.5028
 isRenewable:
   unknown:
     - datetime: '2022-01-01'
-      source: EMBER 2022; assumes 38.76% coal, 36.91% hydro, 10.68% gas, 10.14% solar,
+      source: >-
+        EMBER 2022; assumes 38.76% coal, 36.91% hydro, 10.68% gas, 10.14% solar,
         3.09% wind, 0.14% biomass and 0.27% from other thermal
       value: 0.5028
 parsers:
