Adding Bounding box for weather-pre-processing (#7731)
* Adding Bounding box for weather-pre-processing

* Update FJ.yaml

--- a/config/zones/FJ.yaml
+++ b/config/zones/FJ.yaml
@@ -1,3 +1,8 @@
+bounding_box:
+  - - 177.133330
+    - -19.62909541607167
+  - - 179.9
+    - -15.649580957852429
 country: FJ
 region: Oceania
 timezone: Pacific/Fiji
