ARM for python jobs

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -490,7 +490,7 @@ jobs:
     if: >-
       needs.setup.outputs.python != 'false' ||
       needs.setup.outputs.workflows != 'false'
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04-arm
     timeout-minutes: 5
     steps:
       - name: Checkout
@@ -531,7 +531,7 @@ jobs:
       needs.setup.outputs.python != 'false' ||
       needs.setup.outputs.config != 'false' ||
       needs.setup.outputs.workflows != 'false'
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04-arm
     timeout-minutes: 10
     steps:
       - name: Checkout
