--- a/.github/workflows/deploy_preview_branch.yml
+++ b/.github/workflows/deploy_preview_branch.yml
@@ -9,7 +9,7 @@ on:
         required: true
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04-arm
     permissions:
       contents: read
       deployments: write
