--- a/config/zones/SK.yaml
+++ b/config/zones/SK.yaml
@@ -73,6 +73,9 @@ capacity:
     - datetime: '2021-01-01'
       source: entsoe.eu
       value: 2003.0
+    - datetime: '2023-12-31'
+      source: IAEA
+      value: 2471.0
   oil:
     - datetime: '2017-01-01'
       source: entsoe.eu
