--- a/.github/workflows/pr_agent.yml
+++ b/.github/workflows/pr_agent.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   pr_agent_job:
-    runs-on: ubuntu-24.04-arm
+    runs-on: ubuntu-24.04
     permissions:
       issues: write
       pull-requests: write
