--- a/.github/workflows/validate_local_links_in_md.yml
+++ b/.github/workflows/validate_local_links_in_md.yml
@@ -8,7 +8,7 @@ jobs:
   check_broken_internal_links_in_md:
     name: Markdown links
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
