--- a/config/zones/UZ.yaml
+++ b/config/zones/UZ.yaml
@@ -7,18 +7,22 @@ capacity:
   solar:
   - datetime: '2024-08-30'
     source: 'The Ministry of Energy of the Republic of Uzbekistan'
-    value: 1900
+    comment: https://gov.uz/oz/minenergy/news/view/29602
+    value: 2300
   wind: 
   - datetime: '2024-08-30'
     source: 'The Ministry of Energy of the Republic of Uzbekistan'
+    comment: https://gov.uz/oz/minenergy/news/view/29602
     value: 500
   hydro:
   - datetime: '2024-08-29'
     source: 'Statistics Agency under the President of the Republic of Uzbekistan'
+    comment: https://stat.uz/uz/rasmiy-statistika/industry-2
     value: 2381
   gas:
   - datetime: '2024-08-29'
     source: 'Statistics Agency under the President of the Republic of Uzbekistan'
+    comment: https://stat.uz/uz/rasmiy-statistika/industry-2
     value: 13874
 country: UZ
 region: Asia
