--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,10 @@ description = ""
 license = "AGPL-3.0-or-later"
 authors = ["Electricity Maps <app@electricitymaps.com>"]
 packages = [{ include = "electricitymap" }]
-include = ["config/*.json", "config/*.yaml"]
+include = [
+    { path = "config/*.json", format = ["sdist", "wheel"] },
+    { path = "config/**/*.yaml", format = ["sdist", "wheel"] }
+]
 
 [tool.poetry.dependencies]
 python = '>= 3.10, < 3.11'
