--- a/config/zones/ES-CN-FV.yaml
+++ b/config/zones/ES-CN-FV.yaml
@@ -1,3 +1,8 @@
+bounding_box:
+  - - -14.963587593357897
+    - 27.56789429485049
+  - - -13.336738367383646
+    - 29.216296938224176
 contributors:
   - hectorespert
   - systemcatch
@@ -5,6 +10,175 @@ contributors:
   - t-couery
   - VIKTORVAV99
 country: ES
+emissionFactors:
+  direct:
+    battery discharge:
+      - datetime: '2018-01-01'
+        source: Electricity Maps, 2018 average
+        value: 570.6890544313893
+      - datetime: '2019-01-01'
+        source: Electricity Maps, 2019 average
+        value: 503.96694001770237
+      - datetime: '2020-01-01'
+        source: Electricity Maps, 2020 average
+        value: 673.703149742326
+      - datetime: '2021-01-01'
+        source: Electricity Maps, 2021 average
+        value: 692.2103624985839
+    biomass:
+      datetime: '2021-01-01'
+      source: BEIS 2021
+      value: 0
+    coal:
+      - datetime: '2021-01-01'
+        source: EU-ETS, ENTSO-E 2021
+        value: 971.2573613
+      - datetime: '2022-01-01'
+        source: EU-ETS, ENTSO-E 2022
+        value: 1156.28
+    gas:
+      - datetime: '2021-01-01'
+        source: EU-ETS, ENTSO-E 2021
+        value: 397.8527093
+      - datetime: '2022-01-01'
+        source: EU-ETS, ENTSO-E 2022
+        value: 426.61
+    hydro discharge:
+      - datetime: '2018-01-01'
+        source: Electricity Maps, 2018 average
+        value: 570.6890544313893
+      - datetime: '2019-01-01'
+        source: Electricity Maps, 2019 average
+        value: 503.96694001770237
+      - datetime: '2020-01-01'
+        source: Electricity Maps, 2020 average
+        value: 673.703149742326
+      - datetime: '2021-01-01'
+        source: Electricity Maps, 2021 average
+        value: 692.2103624985839
+    oil:
+      - datetime: '2017-01-01'
+        source: EU-ETS, REE
+        value: 784.591
+      - datetime: '2018-01-01'
+        source: EU-ETS, REE
+        value: 781.383
+      - datetime: '2019-01-01'
+        source: EU-ETS, REE
+        value: 775.822
+      - datetime: '2020-01-01'
+        source: EU-ETS, REE
+        value: 748.463
+      - datetime: '2021-01-01'
+        source: EU-ETS, REE
+        value: 717.273
+      - datetime: '2022-01-01'
+        source: EU-ETS, REE
+        value: 794.155
+      - datetime: '2023-01-01'
+        source: EU-ETS, REE
+        value: 738.986
+  lifecycle:
+    battery discharge:
+      - datetime: '2018-01-01'
+        source: Electricity Maps, 2018 average
+        value: 778.05
+      - datetime: '2019-01-01'
+        source: Electricity Maps, 2019 average
+        value: 910.54
+      - datetime: '2020-01-01'
+        source: Electricity Maps, 2020 average
+        value: 897.12
+      - datetime: '2021-01-01'
+        source: Electricity Maps, 2021 average
+        value: 887.36
+      - datetime: '2022-01-01'
+        source: Electricity Maps, 2022 average
+        value: 945.76
+      - datetime: '2023-01-01'
+        source: Electricity Maps, 2023 average
+        value: 949.44
+    biomass:
+      datetime: '2014-01-01'
+      source: BEIS 2021; IPCC 2014
+      value: 230
+    coal:
+      - datetime: '2021-01-01'
+        source: >-
+          EU-ETS, ENTSO-E 2021; Oberschelp, Christopher, et al. "Global emission
+          hotspots of coal power generation."
+        value: 1050.5643503
+      - datetime: '2022-01-01'
+        source: >-
+          EU-ETS, ENTSO-E 2022; Oberschelp, Christopher, et al. "Global emission
+          hotspots of coal power generation."
+        value: 1235.586989
+    gas:
+      - datetime: '2021-01-01'
+        source: EU-ETS, ENTSO-E 2021; IPCC 2014
+        value: 517.8527093
+      - datetime: '2022-01-01'
+        source: EU-ETS, ENTSO-E 2022; IPCC 2014
+        value: 546.61
+    hydro:
+      datetime: '2020-01-01'
+      source: UNECE 2022
+      value: 10.7
+    hydro discharge:
+      - datetime: '2018-01-01'
+        source: Electricity Maps, 2018 average
+        value: 778.05
+      - datetime: '2019-01-01'
+        source: Electricity Maps, 2019 average
+        value: 910.54
+      - datetime: '2020-01-01'
+        source: Electricity Maps, 2020 average
+        value: 897.12
+      - datetime: '2021-01-01'
+        source: Electricity Maps, 2021 average
+        value: 887.36
+      - datetime: '2022-01-01'
+        source: Electricity Maps, 2022 average
+        value: 945.76
+      - datetime: '2023-01-01'
+        source: Electricity Maps, 2023 average
+        value: 949.44
+    nuclear:
+      datetime: '2020-01-01'
+      source: UNECE 2022
+      value: 5.13
+    oil:
+      - datetime: '2017-01-01'
+        source: EU-ETS, REE
+        value: 1028.591
+      - datetime: '2018-01-01'
+        source: EU-ETS, REE
+        value: 1025.383
+      - datetime: '2019-01-01'
+        source: EU-ETS, REE
+        value: 1019.822
+      - datetime: '2020-01-01'
+        source: EU-ETS, REE
+        value: 992.463
+      - datetime: '2021-01-01'
+        source: EU-ETS, REE
+        value: 961.273
+      - datetime: '2022-01-01'
+        source: EU-ETS, REE
+        value: 1038.155
+      - datetime: '2023-01-01'
+        source: EU-ETS, REE
+        value: 982.986
+    solar:
+      datetime: '2021-01-01'
+      source: INCER ACV
+      value: 25.6
+    wind:
+      datetime: '2021-01-01'
+      source: >-
+        UNECE 2022, WindEurope "Wind energy in Europe, 2021 Statistics and the
+        outlook for 2022-2026" Wind Europe Proceedings (2021)
+      value: 12.62
 parsers:
   consumption: ES.fetch_consumption
   production: ES.fetch_production
