--- a/config/zones/US-CAL-IID.yaml
+++ b/config/zones/US-CAL-IID.yaml
@@ -53,6 +53,9 @@ capacity:
     - datetime: '2023-10-01'
       source: EIA.gov
       value: 406.4
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 543.2
   unknown:
     - datetime: '2023-10-01'
       source: EIA.gov
