--- a/config/zones/US-CAL-LDWP.yaml
+++ b/config/zones/US-CAL-LDWP.yaml
@@ -29,6 +29,9 @@ capacity:
     - datetime: '2024-07-01'
       source: EIA.gov
       value: 4597.2
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 4591.6
   geothermal:
     - datetime: '2023-10-01'
       source: EIA.gov
@@ -56,6 +59,9 @@ capacity:
     - datetime: '2023-12-01'
       source: EIA.gov
       value: 1000.9
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 1002.7
   unknown:
     - datetime: '2023-10-01'
       source: EIA.gov
