--- a/config/zones/US-CAR-DUK.yaml
+++ b/config/zones/US-CAR-DUK.yaml
@@ -22,6 +22,9 @@ capacity:
     - datetime: '2023-10-01'
       source: EIA.gov
       value: 1494.7
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 1222.7
   gas:
     - datetime: '2023-10-01'
       source: EIA.gov
@@ -68,6 +71,9 @@ capacity:
     - datetime: '2024-07-01'
       source: EIA.gov
       value: 2143.0
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 2143.1
   unknown:
     - datetime: '2023-10-01'
       source: EIA.gov
