--- a/config/zones/US-CENT-SWPP.yaml
+++ b/config/zones/US-CENT-SWPP.yaml
@@ -14,6 +14,9 @@ capacity:
     - datetime: '2024-05-01'
       source: EIA.gov
       value: 26.7
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 28.5
   biomass:
     - datetime: '2023-10-01'
       source: EIA.gov
