--- a/config/zones/US-FLA-FPC.yaml
+++ b/config/zones/US-FLA-FPC.yaml
@@ -62,6 +62,9 @@ capacity:
     - datetime: '2024-06-01'
       source: EIA.gov
       value: 1489.5
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 1564.4
   unknown:
     - datetime: '2023-10-01'
       source: EIA.gov
