--- a/config/zones/US-FLA-TEC.yaml
+++ b/config/zones/US-FLA-TEC.yaml
@@ -8,6 +8,9 @@ capacity:
     - datetime: '2023-10-01'
       source: EIA.gov
       value: 12.6
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 27.6
   biomass:
     - datetime: '2023-10-01'
       source: EIA.gov
