--- a/config/zones/US-MIDA-PJM.yaml
+++ b/config/zones/US-MIDA-PJM.yaml
@@ -80,6 +80,9 @@ capacity:
     - datetime: '2024-07-01'
       source: EIA.gov
       value: 104180.7
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 104186.4
   geothermal:
     - datetime: '2023-10-01'
       source: EIA.gov
@@ -118,6 +121,9 @@ capacity:
     - datetime: '2024-06-01'
       source: EIA.gov
       value: 5213.7
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 5211.9
   solar:
     - datetime: '2023-10-01'
       source: EIA.gov
@@ -146,6 +152,9 @@ capacity:
     - datetime: '2024-07-01'
       source: EIA.gov
       value: 12437.1
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 13263.0
   unknown:
     - datetime: '2023-10-01'
       source: EIA.gov
