--- a/config/zones/US-MIDW-MISO.yaml
+++ b/config/zones/US-MIDW-MISO.yaml
@@ -33,6 +33,9 @@ capacity:
     - datetime: '2024-06-01'
       source: EIA.gov
       value: 2240.5
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 2244.0
   coal:
     - datetime: '2023-10-01'
       source: EIA.gov
@@ -77,6 +80,9 @@ capacity:
     - datetime: '2024-07-01'
       source: EIA.gov
       value: 81978.8
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 81907.0
   geothermal:
     - datetime: '2023-10-01'
       source: EIA.gov
@@ -158,6 +164,9 @@ capacity:
     - datetime: '2024-07-01'
       source: EIA.gov
       value: 8478.0
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 10222.5
   unknown:
     - datetime: '2023-10-01'
       source: EIA.gov
@@ -181,6 +190,9 @@ capacity:
     - datetime: '2024-04-01'
       source: EIA.gov
       value: 31599.0
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 31941.7
 comment: Midcontinent Independent Transmission System Operator, Inc..
 contributors:
   - systemcatch
