--- a/config/zones/US-NE-ISNE.yaml
+++ b/config/zones/US-NE-ISNE.yaml
@@ -20,6 +20,9 @@ capacity:
     - datetime: '2024-05-01'
       source: EIA.gov
       value: 372.2
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 385.7
   biomass:
     - datetime: '2023-10-01'
       source: EIA.gov
@@ -131,6 +134,9 @@ capacity:
     - datetime: '2024-07-01'
       source: EIA.gov
       value: 2943.5
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 3013.2
   unknown:
     - datetime: '2023-10-01'
       source: EIA.gov
