--- a/config/zones/US-NW-AVA.yaml
+++ b/config/zones/US-NW-AVA.yaml
@@ -64,6 +64,9 @@ capacity:
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 249.3
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 349.3
 comment: Avista Corporation
 contributors:
   - systemcatch
