--- a/config/zones/US-NW-NEVP.yaml
+++ b/config/zones/US-NW-NEVP.yaml
@@ -45,6 +45,9 @@ capacity:
     - datetime: '2024-04-01'
       source: EIA.gov
       value: 860.7
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 889.9
   hydro:
     - datetime: '2023-10-01'
       source: EIA.gov
@@ -86,6 +89,9 @@ capacity:
     - datetime: '2024-07-01'
       source: EIA.gov
       value: 4080.9
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 4180.9
   unknown:
     - datetime: '2023-10-01'
       source: EIA.gov
