--- a/config/zones/US-NW-NWMT.yaml
+++ b/config/zones/US-NW-NWMT.yaml
@@ -53,6 +53,9 @@ capacity:
     - datetime: '2023-10-01'
       source: EIA.gov
       value: 177.0
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 179.0
   unknown:
     - datetime: '2023-10-01'
       source: EIA.gov
