--- a/config/zones/US-NW-PACE.yaml
+++ b/config/zones/US-NW-PACE.yaml
@@ -28,6 +28,9 @@ capacity:
     - datetime: '2024-05-01'
       source: EIA.gov
       value: 6988.4
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 5824.3
   gas:
     - datetime: '2023-10-01'
       source: EIA.gov
@@ -44,6 +47,9 @@ capacity:
     - datetime: '2024-07-01'
       source: EIA.gov
       value: 3446.9
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 4611.0
   geothermal:
     - datetime: '2023-10-01'
       source: EIA.gov
