--- a/config/zones/US-NW-WACM.yaml
+++ b/config/zones/US-NW-WACM.yaml
@@ -17,6 +17,9 @@ capacity:
     - datetime: '2024-06-01'
       source: EIA.gov
       value: 49.5
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 69.1
   biomass:
     - datetime: '2023-10-01'
       source: EIA.gov
