--- a/config/zones/US-NY-NYIS.yaml
+++ b/config/zones/US-NY-NYIS.yaml
@@ -20,6 +20,9 @@ capacity:
     - datetime: '2024-07-01'
       source: EIA.gov
       value: 239.5
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 242.5
   biomass:
     - datetime: '2023-10-01'
       source: EIA.gov
@@ -104,6 +107,9 @@ capacity:
     - datetime: '2024-07-01'
       source: EIA.gov
       value: 1817.8
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 1951.5
   unknown:
     - datetime: '2023-10-01'
       source: EIA.gov
