--- a/config/zones/US-SE-SOCO.yaml
+++ b/config/zones/US-SE-SOCO.yaml
@@ -11,6 +11,9 @@ capacity:
     - datetime: '2024-03-01'
       source: EIA.gov
       value: 83.7
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 148.7
   biomass:
     - datetime: '2023-10-01'
       source: EIA.gov
@@ -30,6 +33,9 @@ capacity:
     - datetime: '2024-06-01'
       source: EIA.gov
       value: 1878.8
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 1875.6
   coal:
     - datetime: '2023-10-01'
       source: EIA.gov
@@ -53,6 +59,9 @@ capacity:
     - datetime: '2024-05-01'
       source: EIA.gov
       value: 39113.5
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 36372.2
   geothermal:
     - datetime: '2023-10-01'
       source: EIA.gov
@@ -85,6 +94,9 @@ capacity:
     - datetime: '2024-06-01'
       source: EIA.gov
       value: 1387.9
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 1346.1
   solar:
     - datetime: '2023-10-01'
       source: EIA.gov
@@ -101,6 +113,9 @@ capacity:
     - datetime: '2024-05-01'
       source: EIA.gov
       value: 5132.1
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 5073.5
   unknown:
     - datetime: '2023-10-01'
       source: EIA.gov
