--- a/config/zones/US-SW-AZPS.yaml
+++ b/config/zones/US-SW-AZPS.yaml
@@ -11,6 +11,9 @@ capacity:
     - datetime: '2024-06-01'
       source: EIA.gov
       value: 475.0
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 617.0
   biomass:
     - datetime: '2023-10-01'
       source: EIA.gov
@@ -56,6 +59,9 @@ capacity:
     - datetime: '2024-06-01'
       source: EIA.gov
       value: 1041.9
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 1191.9
   unknown:
     - datetime: '2023-10-01'
       source: EIA.gov
