--- a/config/zones/US-SW-PNM.yaml
+++ b/config/zones/US-SW-PNM.yaml
@@ -14,6 +14,9 @@ capacity:
     - datetime: '2024-06-01'
       source: EIA.gov
       value: 238.0
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 338.0
   biomass:
     - datetime: '2023-10-01'
       source: EIA.gov
@@ -71,6 +74,9 @@ capacity:
     - datetime: '2024-06-01'
       source: EIA.gov
       value: 1284.0
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 1584.0
   unknown:
     - datetime: '2023-10-01'
       source: EIA.gov
