--- a/config/zones/US-SW-SRP.yaml
+++ b/config/zones/US-SW-SRP.yaml
@@ -68,6 +68,9 @@ capacity:
     - datetime: '2024-06-01'
       source: EIA.gov
       value: 1474.7
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 1474.9
   unknown:
     - datetime: '2023-10-01'
       source: EIA.gov
