--- a/config/zones/US-TEN-TVA.yaml
+++ b/config/zones/US-TEN-TVA.yaml
@@ -68,6 +68,9 @@ capacity:
     - datetime: '2024-07-01'
       source: EIA.gov
       value: 1118.1
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 1300.7
   unknown:
     - datetime: '2023-10-01'
       source: EIA.gov
