--- a/config/zones/US-TEX-ERCO.yaml
+++ b/config/zones/US-TEX-ERCO.yaml
@@ -32,6 +32,9 @@ capacity:
     - datetime: '2024-07-01'
       source: EIA.gov
       value: 4825.1
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 6081.3
   biomass:
     - datetime: '2023-10-01'
       source: EIA.gov
@@ -71,6 +74,9 @@ capacity:
     - datetime: '2024-07-01'
       source: EIA.gov
       value: 66635.4
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 66756.4
   geothermal:
     - datetime: '2023-10-01'
       source: EIA.gov
@@ -125,6 +131,9 @@ capacity:
     - datetime: '2024-07-01'
       source: EIA.gov
       value: 17696.6
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 21037.1
   unknown:
     - datetime: '2023-10-01'
       source: EIA.gov
@@ -151,6 +160,9 @@ capacity:
     - datetime: '2024-07-01'
       source: EIA.gov
       value: 38235.6
+    - datetime: '2024-10-01'
+      source: EIA.gov
+      value: 38419.4
 comment: Electric Reliability Council Of Texas, Inc.
 contributors:
   - systemcatch
