--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ pycountry = { version = "^22.3.5", optional = true }
 ruff = "0.4.3"
 tzdata = "^2025.1"
 numpy = "^1.24.4"
+odfpy = { version = "^1.4.1", optional = true }
 
 [tool.poetry.scripts]
 test-parser = 'test_parser:test_parser'
@@ -58,6 +59,7 @@ parsers = [
     "openpyxl",
     "pydataxm",
     "pycountry",
+    "odfpy",
 ]
 
 scripts = ["xmltodict"]
