feat(contrib): add config/ folder to module build + change import

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ version = "1.0.0"
 description = ""
 license = "AGPL-3.0-or-later"
 authors = ["Electricity Maps <app@electricitymaps.com>"]
-packages = [{ include = "electricitymap" }]
-include = ["config/*.json", "config/*.yaml"]
+packages = [{ include = "electricitymap" }, { include = "config", to = "electricitymap/contrib/config" }]
+include = ["config/*.json", "config/**/*.yaml"]
 
 [tool.poetry.dependencies]
 python = '>= 3.10, < 3.11'
