capacity values for 2023

--- a/config/zones/AW.yaml
+++ b/config/zones/AW.yaml
@@ -4,8 +4,18 @@ bounding_box:
   - - -69.37682044199994
     - 13.132147528000104
 capacity:
-  oil: 257.88
-  wind: 30
+  solar:
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+  unknown:
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 220.0
+  wind:
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 30.0
 contributors:
   - pascalheraud
 country: AW
