--- a/config/zones/BD.yaml
+++ b/config/zones/BD.yaml
@@ -12,6 +12,9 @@ capacity:
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 2860.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 4770.0
   gas:
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
