--- a/config/zones/DO.yaml
+++ b/config/zones/DO.yaml
@@ -4,13 +4,34 @@ bounding_box:
   - - -68.3179432848
     - 19.8849105901
 capacity:
-  biomass: 30
-  coal: 950
-  gas: 678
-  hydro: 623
-  oil: 1938
-  solar: 188
-  wind: 370
+  biomass:
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 90.0
+  coal:
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 1060.0
+  gas:
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 1800.0
+  hydro:
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 620.0
+  solar:
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 1070.0
+  unknown:
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 1740.0
+  wind:
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 420.0
 contributors:
   - systemcatch
   - nessie2013
