--- a/config/zones/GT.yaml
+++ b/config/zones/GT.yaml
@@ -4,14 +4,30 @@ bounding_box:
   - - -88.2250227526
     - 17.8193260767
 capacity:
-  biomass: 1025.009
-  coal: 584.7
-  gas: 250.85
-  geothermal: 49.2
-  hydro: 1417.043
-  oil: 711.218
-  solar: 91
-  wind: 75.9
+  biomass:
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 870.0
+  coal:
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 440.0
+  hydro:
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 1570.0
+  solar:
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 110.0
+  unknown:
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 680.0
+  wind:
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 110.0
 contributors:
   - corradio
   - igorarduin
