--- a/config/zones/TW.yaml
+++ b/config/zones/TW.yaml
@@ -15,6 +15,9 @@ capacity:
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 19240.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 19160.0
   gas:
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
