--- a/config/zones/DO.yaml
+++ b/config/zones/DO.yaml
@@ -5,31 +5,40 @@ bounding_box:
     - 19.8849105901
 capacity:
   biomass:
-    - datetime: '2023-01-01'
+    - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 90.0
   coal:
-    - datetime: '2023-01-01'
+    - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 1060.0
   gas:
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 1630.0
     - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 1800.0
   hydro:
-    - datetime: '2023-01-01'
+    - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 620.0
   solar:
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 730.0
     - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 1070.0
   unknown:
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 1750.0
     - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 1740.0
   wind:
-    - datetime: '2023-01-01'
+    - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 420.0
 contributors:
