--- a/config/zones/AW.yaml
+++ b/config/zones/AW.yaml
@@ -5,15 +5,21 @@ bounding_box:
     - 13.132147528000104
 capacity:
   solar:
-    - datetime: '2022-01-01'
+    - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 10.0
   unknown:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 250.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 260.0
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 220.0
   wind:
-    - datetime: '2022-01-01'
+    - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 30.0
 contributors:
