--- a/config/zones/CR.yaml
+++ b/config/zones/CR.yaml
@@ -5,35 +5,74 @@ bounding_box:
     - 11.2171192489
 capacity:
   biomass:
-    - datetime: '2022-01-01'
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 50.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 60.0
+    - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
       value: 80.0
   geothermal:
-    - datetime: '2022-01-01'
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 210.0
+    - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
       value: 260.0
   hydro:
-    - datetime: '2022-01-01'
+    - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 2330.0
-    - datetime: '2023-01-01'
+    - datetime: '2018-01-01'
       source: Ember, Yearly electricity data
       value: 2370.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 2340.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 2380.0
   oil:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 570.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 470.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 430.0
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 380.0
   solar:
-    - datetime: '2022-01-01'
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 30.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 50.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 60.0
+    - datetime: '2021-01-01'
       source: Ember, Yearly electricity data
       value: 70.0
   wind:
-    - datetime: '2022-01-01'
+    - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
-      value: 390.0
-    - datetime: '2023-01-01'
+      value: 380.0
+    - datetime: '2018-01-01'
       source: Ember, Yearly electricity data
       value: 410.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 390.0
 contributors:
   - corradio
   - jarek
