--- a/config/zones/HN.yaml
+++ b/config/zones/HN.yaml
@@ -5,31 +5,73 @@ bounding_box:
     - 17.4603
 capacity:
   biomass:
-    - datetime: '2022-01-01'
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 210.0
+    - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
       value: 220.0
   coal:
-    - datetime: '2022-01-01'
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 70.0
+    - datetime: '2018-01-01'
       source: Ember, Yearly electricity data
       value: 100.0
   gas:
-    - datetime: '2022-01-01'
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2020-01-01'
       source: Ember, Yearly electricity data
       value: 50.0
   hydro:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 680.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 710.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 730.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 840.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 850.0
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 910.0
   solar:
-    - datetime: '2022-01-01'
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 450.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 510.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 520.0
+    - datetime: '2020-01-01'
       source: Ember, Yearly electricity data
       value: 530.0
   unknown:
-    - datetime: '2022-01-01'
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 800.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 840.0
+    - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
       value: 920.0
   wind:
-    - datetime: '2022-01-01'
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 230.0
+    - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
       value: 240.0
 contributors:
