--- a/config/zones/SV.yaml
+++ b/config/zones/SV.yaml
@@ -5,21 +5,45 @@ bounding_box:
     - 14.4241327987
 capacity:
   biomass:
-    - datetime: '2022-01-01'
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 270.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 310.0
+    - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
       value: 300.0
   geothermal:
-    - datetime: '2022-01-01'
+    - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 200.0
     - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 230.0
   hydro:
-    - datetime: '2022-01-01'
+    - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 570.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 580.0
   solar:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 110.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 170.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 410.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 480.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 540.0
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 570.0
@@ -27,11 +51,20 @@ capacity:
       source: Ember, Yearly electricity data
       value: 590.0
   unknown:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 550.0
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 930.0
   wind:
-    - datetime: '2022-01-01'
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 40.0
+    - datetime: '2021-01-01'
       source: Ember, Yearly electricity data
       value: 50.0
 contributors:
