refactor(us-mida-pjm): upgrade US-MIDA-PJM parser with event classes (#6635)
* fix(us-mida-pjm): fix fetch_exchange, timezones, and price currency, refactor to use event classes

* refactor: prefer UTC timestamped events

---------

Co-authored-by: Viktor Andersson <30777521+VIKTORVAV99@users.noreply.github.com>

--- a/config/zones/US-MIDA-PJM.yaml
+++ b/config/zones/US-MIDA-PJM.yaml
@@ -177,6 +177,7 @@ contributors:
   - systemcatch
   - robertahunt
   - KabelWlan
+  - amv213
 country: US
 delays:
   production: 7
@@ -498,4 +499,4 @@ sources:
     link: https://drive.google.com/file/d/1_FAAuTtIdMuORZKsqHnd9vMNHlQgYarh/view?usp=sharing
   eGrid 2021:
     link: ' https://drive.google.com/file/d/1_FAAuTtIdMuORZKsqHnd9vMNHlQgYarh/view?usp=sharing'
-timezone: US/Eastern
+timezone: America/New_York
