--- a/config/zones/MN.yaml
+++ b/config/zones/MN.yaml
@@ -5,19 +5,37 @@ bounding_box:
     - 52.62958404600003
 capacity:
   coal:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 880.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 910.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 960.0
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 970.0
   hydro:
-    - datetime: '2022-01-01'
+    - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 30.0
   solar:
-    - datetime: '2022-01-01'
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 50.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 60.0
+    - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
       value: 90.0
   wind:
-    - datetime: '2022-01-01'
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 100.0
+    - datetime: '2018-01-01'
       source: Ember, Yearly electricity data
       value: 160.0
 contributors:
