--- a/config/zones/BY.yaml
+++ b/config/zones/BY.yaml
@@ -6,15 +6,75 @@ bounding_box:
   - - 32.6936430193
     - 56.1691299506
 capacity:
-  biomass: 31
-  coal: 0
-  gas: 9468
-  hydro: 73
-  hydro storage: 0
-  nuclear: 0
-  oil: 447
-  solar: 50.9
-  wind: 70.4
+  biomass:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 40.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 50.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 120.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 140.0
+  gas:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 9880.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 9810.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 9820.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 9800.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 9680.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 9720.0
+  hydro:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 100.0
+  nuclear:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 1170.0
+  solar:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 80.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 150.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 160.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 270.0
+  wind:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 80.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 90.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 110.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 120.0
 contributors:
   - admetny
 country: BY
