--- a/config/zones/HN.yaml
+++ b/config/zones/HN.yaml
@@ -4,14 +4,76 @@ bounding_box:
   - - -82.4981
     - 17.4603
 capacity:
-  biomass: 210
-  coal: 135
-  geothermal: 35
-  hydro: 706
-  nuclear: 0
-  oil: 875
-  solar: 451
-  wind: 225
+  biomass:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 210.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 220.0
+  coal:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 70.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 100.0
+  gas:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 50.0
+  hydro:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 680.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 710.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 730.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 840.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 850.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 910.0
+  solar:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 450.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 510.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 520.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 530.0
+  unknown:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 800.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 840.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 920.0
+  wind:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 230.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 240.0
 contributors:
   - alixunderplatz
   - VIKTORVAV99
