US_CA generation forecast parser
create fetch_generation_forecast
create test_snapshot_fetch_generation_forecast
update snapshots
update config file for US-CAL-CISO
upload mock zip file for test

--- a/config/zones/US-CAL-CISO.yaml
+++ b/config/zones/US-CAL-CISO.yaml
@@ -497,6 +497,7 @@ parsers:
   production: US_CA.fetch_production
   productionCapacity: EIA.fetch_production_capacity
   productionPerModeForecast: US_CA.fetch_wind_solar_forecasts
+  generationForecast: US_CA.fetch_generation_forecast
 region: Americas
 sources:
   INCER ACV:
